tests/specs/ecosystem/ghjk/dax/0_40_2_alpha_ghjk.test
ghjk/dax/0.40.2-alpha-ghjk
-- deno.lock --
{
  "version": "3",
  "packages": {
    "specifiers": {
      "jsr:@david/which@0.3": "jsr:@david/which@0.3.0",
      "jsr:@std/assert@^0.221.0": "jsr:@std/assert@0.221.0",
      "jsr:@std/bytes@^0.221.0": "jsr:@std/bytes@0.221.0",
      "jsr:@std/fs@0.221.0": "jsr:@std/fs@0.221.0",
      "jsr:@std/io@0.221.0": "jsr:@std/io@0.221.0",
      "jsr:@std/path@^0.221.0": "jsr:@std/path@0.221.0"
    },
    "jsr": {
      "@david/which@0.3.0": {
        "integrity": "6bdb62c40ac90edcf328e854fa8103a8db21e7c326089cbe3c3a1cf7887d3204"
      },
      "@std/assert@0.221.0": {
        "integrity": "a5f1aa6e7909dbea271754fd4ab3f4e687aeff4873b4cef9a320af813adb489a"
      },
      "@std/bytes@0.221.0": {
        "integrity": "64a047011cf833890a4a2ab7293ac55a1b4f5a050624ebc6a0159c357de91966"
      },
      "@std/fs@0.221.0": {
        "integrity": "028044450299de8ed5a716ade4e6d524399f035513b85913794f4e81f07da286",
        "dependencies": [
          "jsr:@std/assert@^0.221.0",
          "jsr:@std/path@^0.221.0"
        ]
      },
      "@std/io@0.221.0": {
        "integrity": "faf7f8700d46ab527fa05cc6167f4b97701a06c413024431c6b4d207caa010da",
        "dependencies": [
          "jsr:@std/assert@^0.221.0",
          "jsr:@std/bytes@^0.221.0"
        ]
      },
      "@std/path@0.221.0": {
        "integrity": "0a36f6b17314ef653a3a1649740cc8db51b25a133ecfe838f20b79a56ebe0095",
        "dependencies": [
          "jsr:@std/assert@^0.221.0"
        ]
      }
    }
  },
  "remote": {}
}

===

== FAST CHECK EMIT PASSED ==

== TYPE CHECK FAILED ==
-- stdout --

-- stderr --
error: TS2304 [ERROR]: Cannot find name 'PipeOptions'.
  stdout(kind: WritableStream<Uint8Array>, options?: PipeOptions): CommandBuilder;
                                                     ~~~~~~~~~~~
    at file://<tmpdir>/src/command.ts:100:54

TS2304 [ERROR]: Cannot find name 'PipeOptions'.
  stderr(kind: WritableStream<Uint8Array>, options?: PipeOptions): CommandBuilder;
                                                     ~~~~~~~~~~~
    at file://<tmpdir>/src/command.ts:105:54

TS2304 [ERROR]: Cannot find name 'PipeOptions'.
  /** Opens the file and pipes it to the writable stream. */ pipeTo(dest: WritableStream<Uint8Array>, options?: PipeOptions): Promise<this> {
                                                                                                                ~~~~~~~~~~~
    at file://<tmpdir>/src/path.ts:414:113

TS2304 [ERROR]: Cannot find name 'PipeOptions'.
  /** Pipes the response body to the provided writable stream. */ pipeTo(dest: WritableStream<Uint8Array>, options?: PipeOptions): Promise<void> {
                                                                                                                     ~~~~~~~~~~~
    at file://<tmpdir>/src/request.ts:109:118

TS2304 [ERROR]: Cannot find name 'PipeOptions'.
  /** Pipes the response body to the provided writable stream. */ pipeTo(dest: WritableStream<Uint8Array>, options?: PipeOptions): Promise<void> {
                                                                                                                     ~~~~~~~~~~~
    at file://<tmpdir>/src/request.ts:217:118

Found 5 errors.

